stubbed in login page. add basic styling

--- a/views/index.html
+++ b/views/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="design" />
     <style>
         * {
             margin: 0;
@@ -139,7 +140,7 @@
 
     </script>
 
-    <div id="journalPage" contenteditable="true"></div>
+    <div id="journalPage" contenteditable="true"  class="input"></div>
 
 
 </body>
